--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,45 +5,45 @@
 
         <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
         <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
-        <%= form_with model: モデル名, url: 新規登録機能へのパス, local: true do |f| %>
+        <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
 
         <div class="field">
-          <%= f.label :hoge, "メールアドレス" %><br />
-          <%= f.email_field :hoge, id:"user_email", autofocus: true, autocomplete: "email" %>
+          <%= f.label :"メールアドレス" %><br />
+          <%= f.email_field :email, id: "email", autofocus: true, autocomplete: "email" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :hoge, id:"user_password", autocomplete: "new-password" %>
+          <%= f.label :"パスワード（6文字以上）" %><br />
+          <%= f.password_field :password, id: "user_password", autocomplete: "current-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード再入力" %><br />
-          <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
+          <%= f.label :"パスワード再入力" %><br />
+          <%= f.password_field :password, id: "user_password", autocomplete: "current-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "ユーザー名" %><br />
-          <%= f.text_field :hoge, id:"user_name" %>
+          <%= f.label :"ユーザー名" %><br />
+          <%= f.text_field :user_name, id: "user_name", autocomplete: "user_name" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "プロフィール" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_profile" %>
+          <%= f.label :profile, "プロフィール" %><br />
+          <%= f.text_area :profile, id: "user_profile", rows: 2, cols: 50 %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "所属" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_occupation" %>
+          <%= f.label :affiliation, "所属" %><br />
+          <%= f.text_area :affiliation, id: "user_affiliation", rows: 2, cols: 50 %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "役職" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_position" %>
+          <%= f.label :position, "役職" %><br />
+          <%= f.text_area :position, id: "user_position", rows: 2, cols: 50 %>
         </div>
 
         <div class="actions">
-          <%= f.submit "新規登録", class: :form__btn  %>
+          <%= f.submit "新規登録", class: :form__btn %>
         </div>
       <% end %>
     </div>
