--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,7 @@
       <p class="prototype__hedding">
         <%= @prototype.name %>
       </p>
-      <%= link_to "by #{@prototype.user.user_name}", root_path, class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.user_name}", user_path(@prototype.user), class: "card__user" %>
 
       <% if user_signed_in? && current_user == @prototype.user %>
         <div class="prototype__manage">
@@ -51,7 +51,7 @@
           <% @prototype.comments.each do |comment| %>
             <li class="comments_list">
               <%= comment.content %>
-              <%= link_to "（#{comment.user.user_name}）", user_path(prototype.user), class: :comment_user %>
+              <%= link_to "（#{comment.user.user_name}）", user_path(@prototype.user), class: :comment_user %>
             </li>
           <% end %>
         </ul>
